--- a/Destination/src/main/resources/application.properties
+++ b/Destination/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/TripAdvisor
             spring.datasource.username=postgres
             spring.datasource.password=admin
-            spring.jpa.hibernate.ddl-auto=create
+            spring.jpa.hibernate.ddl-auto=update
             spring.jpa.show-sql=true
             spring.jpa.properties.hibernate.format_sql=true
             server.port=2000  
