--- a/TripAdvisor/src/main/resources/application.properties
+++ b/TripAdvisor/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/TripAdvisor
             spring.datasource.username=postgres
             spring.datasource.password=admin
-            spring.jpa.hibernate.ddl-auto=create
+            spring.jpa.hibernate.ddl-auto=update
             spring.jpa.show-sql=true
             spring.jpa.properties.hibernate.format_sql=true
-            server.port=1000  
+            server.port=2022  
             spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
             spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+spring.application.name=review-service
+#eureka.instance.prefer-ip-address=true
+#eureka.client.fetch-registry=true
+#eureka.client.register-with-eureka=true
+#eureka.client.service-url.defaultZone: http://localhost:8761/eureka
